Fix text truncation of performer name in scene form

--- a/frontend/src/pages/scenes/sceneForm/styles.scss
+++ b/frontend/src/pages/scenes/sceneForm/styles.scss
@@ -18,12 +18,6 @@
 
   .performer-name {
     flex-grow: 1;
-    font-weight: bold;
-    width: 0;
-  }
-
-  .performer-disambiguation {
-    flex-grow: 1;
     width: 0;
   }
 
